--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <div class="row align-items-center">
                             <div class="col-lg-2">
                                 <div class="logo-box">
-                                    <a href="index.html" class="logo"><img src="images/logo.png" alt="logo"></a>
+                                    <a href="index.html" class="logo"><img src="images/logo.png" alt="logo" width="auto" height="40"></a>
                                     <div class="menu-toggler">
                                         <i class="la la-bars"></i>
                                         <i class="la la-times"></i>
@@ -244,8 +244,7 @@ teens (13 - 19 years) for the future of work disruption & global opportunities.
                             can start preparing now with our all-round support.
                         </p>
                         <p class="section__desc">
-                            Neque porro quisquam est, qui dolorem ipsum
-                            quia dolor sit amet, adipisci velit, sed quia non numquam eius modi tempora
+                          
                         </p>
                     </div><!-- end section-heading -->
                     <div class="btn-box">
@@ -278,7 +277,7 @@ teens (13 - 19 years) for the future of work disruption & global opportunities.
                 <div class="get-start-content">
                     <div class="section-heading">
                         <h2 class="section__title text-white">Here’s why every preteen and teen need to use Career Center <br>
-                            in preparing for the future of work disruption CTA Get started
+                            in preparing for the future of work disruption
 
                         </h2>
                         <span class="section-divider section-divider-light"></span>
@@ -290,9 +289,7 @@ teens (13 - 19 years) for the future of work disruption & global opportunities.
  
                          </p>
                     </div><!-- end section-heading -->
-                    <div class="btn-box margin-top-20px">
-                        <a href="#" class="theme-btn theme-btn-hover-light">Get Started</a>
-                    </div>
+                   
                 </div><!-- end get-start-content -->
             </div><!-- end col-lg-10 -->
             <div class="col-lg-4 column-td-half">
@@ -305,6 +302,11 @@ teens (13 - 19 years) for the future of work disruption & global opportunities.
                     </div>
                 </div>
             </div><!-- end col-lg-4 -->
+            <div class="col-lg-4">
+                <div class="btn-box ">
+                    <a href="#" class="theme-btn theme-btn-hover">Get Started</a>
+                </div>
+            </div>
         </div><!-- end row -->
     </div><!-- end container -->
     <div class="box-icons2">
@@ -464,7 +466,7 @@ teens (13 - 19 years) for the future of work disruption & global opportunities.
                                         </div><!-- end card-content -->
                                     </div><!-- end card-item -->
                                 </div><!-- end col-lg-4 -->
-                                <div class="col-lg-4 column-td-half">
+                                <div class="col-lg-4 column-td-half d-none d-md-block" >
                                     <div class="card-item card-preview" data-tooltip-content="#tooltip_content_3">
                                         <div class="card-image">
                                             <a href="course-details.html" class="card__img"><img src="images/img10.jpg" alt=""></a>
@@ -625,7 +627,7 @@ teens (13 - 19 years) for the future of work disruption & global opportunities.
                                         </div><!-- end card-content -->
                                     </div><!-- end card-item -->
                                 </div><!-- end col-lg-4 -->
-                                <div class="col-lg-4 column-td-half">
+                                <div class="col-lg-4 column-td-half d-none d-md-block">
                                     <div class="card-item card-preview" data-tooltip-content="#tooltip_content_3">
                                         <div class="card-image">
                                             <a href="course-details.html" class="card__img"><img src="images/img11.jpg" alt=""></a>
