--- a/login - Copy.html
+++ b/login - Copy.html
@@ -87,7 +87,7 @@
                                     <div class="col-lg-12">
                                         <div class="input-box">
                                             <div class="form-group">
-                                                <input class="form-control" type="text" name="lname"  id="password" placeholder="Last Name">
+                                                <input class="form-control" type="text" name="lname"  id="lname" placeholder="Last Name">
                                                 <span class="la la-lock input-icon"></span>
                                             </div>
                                         </div>
